@@ -47,12 +47,11 @@ IF( NOT LIBTAG_LIBRARIES )
 	MESSAGE( FATAL_ERROR "taglib not found!" )
 ENDIF( NOT LIBTAG_LIBRARIES )
 
-#
+
 #PKG_CHECK_MODULES( LIBTAGEXTRAS taglib-extras )
 #IF( NOT LIBTAGEXTRAS_LIBRARIES )
 #	MESSAGE( FATAL_ERROR "taglib-extras not found!" )
 #ENDIF( NOT LIBTAGEXTRAS_LIBRARIES )
-#
 
 PKG_CHECK_MODULES( LIBDBUS dbus-1 )
 IF( NOT LIBDBUS_LIBRARIES )
